z-index of map controls bug fix
* map controls were layered above the modals for contact and order cart. Reduced z-index so that they remain beneath these modals, but remain above the map.

--- a/src/App.less
+++ b/src/App.less
@@ -116,7 +116,7 @@
 
     #MapLayerControls {
       position: absolute;
-      z-index: 9999;
+      z-index: 999;
       padding: @padding-xs;
       gap: @padding-xs;
       flex-direction: column;
